--- a/src/scss/theme/_button.scss
+++ b/src/scss/theme/_button.scss
@@ -123,7 +123,7 @@ footer {
   }
 
   .su-button,
-  .stanford-news-vertical-teaser-term .more-link a {
+  .stanford-news-vertical-teaser-term .more-link a,
   .node.event .more-link a {
     &.su-link--external {
       &::after {
